add_subdirectory(fbs)
add_subdirectory(common)
add_subdirectory(meta)
add_subdirectory(client)
add_subdirectory(lib)
add_subdirectory(memory)
add_subdirectory(kv)
add_subdirectory(storage)
add_subdirectory(mgmtd)
add_subdirectory(fdb)
add_subdirectory(stubs)
add_subdirectory(monitor_collector)
add_subdirectory(analytics)
add_subdirectory(core)
add_subdirectory(tools)
add_subdirectory(fuse)
add_subdirectory(simple_example)
add_subdirectory(migration)
